[gd_scene load_steps=59 format=3 uid="uid://m02a01eip73q"]

[ext_resource type="PackedScene" uid="uid://17nrav3nunwu" path="res://ui/scenes/base_ui_window.tscn" id="1_txoe5"]
[ext_resource type="Texture2D" uid="uid://xjefgwu114ni" path="res://ui/sprites/buttons_sound_test.png" id="2_v4oi6"]
[ext_resource type="Script" uid="uid://dgafnfd0mmxw4" path="res://ui/scripts/button_music_test.gd" id="3_065er"]
[ext_resource type="AudioStream" uid="uid://cwtn4uocma24d" path="res://assets/audio/music/music_test.mp3" id="4_t4omb"]
[ext_resource type="Script" uid="uid://cbiho1hpwn6tg" path="res://ui/scripts/button_ambience_test.gd" id="5_2qygk"]
[ext_resource type="Script" uid="uid://dhpna3qqqt66t" path="res://ui/scripts/volume_control.gd" id="5_7apuw"]
[ext_resource type="AudioStream" uid="uid://bsnentocewbd2" path="res://assets/audio/sfx/ambience/forest_ambience_test.mp3" id="6_1h73q"]
[ext_resource type="Script" uid="uid://deq27md70r8yd" path="res://ui/scripts/button_vfx_test.gd" id="7_j08iq"]
[ext_resource type="AudioStream" uid="uid://ctmrtm6whkrl7" path="res://assets/audio/sfx/knock_sfx_test.mp3" id="8_7apuw"]

[sub_resource type="LabelSettings" id="LabelSettings_v4oi6"]
font_size = 18
font_color = Color(0.32549, 0.184314, 0.117647, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0igwm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_41ogj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j8nq4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1qe7s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vigiu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jfkqj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jg2bh"]
texture = ExtResource("2_v4oi6")
region_rect = Rect2(71, 42, 8, 13)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sw2if"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0x6gt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jg2bh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0j0k2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gc1hl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nlp30"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l6afl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5pxiw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0j0k2"]
texture = ExtResource("2_v4oi6")
region_rect = Rect2(81, 42, 8, 13)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m4xwb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7dyf0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v4oi6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_065er"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t4omb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2qygk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1h73q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hfn6w"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_065er"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
texture = ExtResource("2_v4oi6")
region_rect = Rect2(5, 5, 22, 22)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j08iq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v4oi6"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
texture = ExtResource("2_v4oi6")
region_rect = Rect2(5, 37, 22, 22)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7apuw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ed2xo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r1upy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mmpei"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hg0fd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_topt8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qnsqg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1h73q"]
texture = ExtResource("2_v4oi6")
region_rect = Rect2(5, 5, 22, 22)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7gdy7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hfn6w"]
texture = ExtResource("2_v4oi6")
region_rect = Rect2(5, 37, 22, 22)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jmy2h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jt5bo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tw6qf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_47ovc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l2it1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hrtfq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u6oi3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0igwm"]
texture = ExtResource("2_v4oi6")
region_rect = Rect2(5, 5, 22, 22)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_amjk3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_41ogj"]
texture = ExtResource("2_v4oi6")
region_rect = Rect2(5, 37, 22, 22)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_snl73"]

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="BaseUIWindow" parent="CanvasLayer" instance=ExtResource("1_txoe5")]

[node name="Label (title)" parent="CanvasLayer/BaseUIWindow/PanelContainer/MarginContainer/NinePatchRect/VBoxContainer/HBoxContainer" index="0"]
text = "SOUND TESTING"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -527.0
offset_top = -273.0
offset_right = -314.0
offset_bottom = -166.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="master" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
alignment = 1

[node name="Control" type="Control" parent="CanvasLayer/VBoxContainer/master"]
custom_minimum_size = Vector2(105, 33)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/VBoxContainer/master/Control"]
texture_filter = 1
custom_minimum_size = Vector2(70, 22)
layout_mode = 1
offset_right = 70.0
offset_bottom = 22.0
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_v4oi6")
region_rect = Rect2(5, 69, 70, 22)

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/master/Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.5
offset_top = -11.5
offset_right = 25.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "MASTER"
label_settings = SubResource("LabelSettings_v4oi6")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/master"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("5_7apuw")

[node name="music_decrease" type="Button" parent="CanvasLayer/VBoxContainer/master/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(8, 13)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_0igwm")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_41ogj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_j8nq4")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_1qe7s")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_vigiu")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_jfkqj")
theme_override_styles/hover = SubResource("StyleBoxTexture_jg2bh")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_sw2if")
theme_override_styles/pressed = SubResource("StyleBoxTexture_jg2bh")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_0x6gt")
theme_override_styles/normal = SubResource("StyleBoxTexture_jg2bh")

[node name="VolumeBar" type="ColorRect" parent="CanvasLayer/VBoxContainer/master/HBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
color = Color(0.772549, 0.701961, 0.247059, 1)

[node name="music_increase" type="Button" parent="CanvasLayer/VBoxContainer/master/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(8, 13)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_jg2bh")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_0j0k2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gc1hl")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_nlp30")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_l6afl")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_5pxiw")
theme_override_styles/hover = SubResource("StyleBoxTexture_0j0k2")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_m4xwb")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0j0k2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_7dyf0")
theme_override_styles/normal = SubResource("StyleBoxTexture_0j0k2")

[node name="music" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Control" type="Control" parent="CanvasLayer/VBoxContainer/music"]
custom_minimum_size = Vector2(105, 33)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/VBoxContainer/music/Control"]
texture_filter = 1
custom_minimum_size = Vector2(70, 22)
layout_mode = 1
offset_right = 70.0
offset_bottom = 22.0
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_v4oi6")
region_rect = Rect2(5, 69, 70, 22)

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/music/Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.5
offset_top = -11.5
offset_right = 25.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "MUSIC"
label_settings = SubResource("LabelSettings_v4oi6")

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer/music"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_v4oi6")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_065er")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_t4omb")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_2qygk")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_1h73q")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_hfn6w")
theme_override_styles/hover = SubResource("StyleBoxTexture_065er")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_j08iq")
theme_override_styles/pressed = SubResource("StyleBoxTexture_v4oi6")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_7apuw")
theme_override_styles/normal = SubResource("StyleBoxTexture_065er")
script = ExtResource("3_065er")
music_stream = ExtResource("4_t4omb")
play_icon_region = Rect2(5, 5, 22, 22)
stop_icon_region = Rect2(101, 5, 22, 22)

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/music"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
script = ExtResource("5_7apuw")
bus_name = "Music"

[node name="music_decrease" type="Button" parent="CanvasLayer/VBoxContainer/music/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(8, 13)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_0igwm")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_41ogj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_j8nq4")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_1qe7s")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_vigiu")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_jfkqj")
theme_override_styles/hover = SubResource("StyleBoxTexture_jg2bh")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_sw2if")
theme_override_styles/pressed = SubResource("StyleBoxTexture_jg2bh")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_0x6gt")
theme_override_styles/normal = SubResource("StyleBoxTexture_jg2bh")

[node name="VolumeBar" type="ColorRect" parent="CanvasLayer/VBoxContainer/music/HBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
color = Color(0.772549, 0.701961, 0.247059, 1)

[node name="music_increase" type="Button" parent="CanvasLayer/VBoxContainer/music/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(8, 13)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_jg2bh")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_0j0k2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gc1hl")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_nlp30")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_l6afl")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_5pxiw")
theme_override_styles/hover = SubResource("StyleBoxTexture_0j0k2")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_m4xwb")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0j0k2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_7dyf0")
theme_override_styles/normal = SubResource("StyleBoxTexture_0j0k2")

[node name="ambience" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Control" type="Control" parent="CanvasLayer/VBoxContainer/ambience"]
custom_minimum_size = Vector2(105, 33)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/VBoxContainer/ambience/Control"]
texture_filter = 1
custom_minimum_size = Vector2(70, 22)
layout_mode = 1
offset_right = 70.0
offset_bottom = 22.0
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_v4oi6")
region_rect = Rect2(5, 69, 70, 22)

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/ambience/Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.5
offset_top = -11.5
offset_right = 25.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "AMBIENCE"
label_settings = SubResource("LabelSettings_v4oi6")

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer/ambience"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_ed2xo")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_r1upy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mmpei")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_hg0fd")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_topt8")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_qnsqg")
theme_override_styles/hover = SubResource("StyleBoxTexture_1h73q")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_7gdy7")
theme_override_styles/pressed = SubResource("StyleBoxTexture_hfn6w")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_jmy2h")
theme_override_styles/normal = SubResource("StyleBoxTexture_1h73q")
script = ExtResource("5_2qygk")
music_stream = ExtResource("6_1h73q")
play_icon_region = Rect2(5, 5, 22, 22)
stop_icon_region = Rect2(101, 5, 22, 22)

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/ambience"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
script = ExtResource("5_7apuw")
bus_name = "Ambience"

[node name="music_decrease" type="Button" parent="CanvasLayer/VBoxContainer/ambience/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(8, 13)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_0igwm")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_41ogj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_j8nq4")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_1qe7s")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_vigiu")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_jfkqj")
theme_override_styles/hover = SubResource("StyleBoxTexture_jg2bh")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_sw2if")
theme_override_styles/pressed = SubResource("StyleBoxTexture_jg2bh")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_0x6gt")
theme_override_styles/normal = SubResource("StyleBoxTexture_jg2bh")

[node name="VolumeBar" type="ColorRect" parent="CanvasLayer/VBoxContainer/ambience/HBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
color = Color(0.772549, 0.701961, 0.247059, 1)

[node name="music_increase" type="Button" parent="CanvasLayer/VBoxContainer/ambience/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(8, 13)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_jg2bh")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_0j0k2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gc1hl")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_nlp30")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_l6afl")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_5pxiw")
theme_override_styles/hover = SubResource("StyleBoxTexture_0j0k2")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_m4xwb")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0j0k2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_7dyf0")
theme_override_styles/normal = SubResource("StyleBoxTexture_0j0k2")

[node name="effects" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Control" type="Control" parent="CanvasLayer/VBoxContainer/effects"]
custom_minimum_size = Vector2(105, 33)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/VBoxContainer/effects/Control"]
texture_filter = 1
custom_minimum_size = Vector2(70, 22)
layout_mode = 1
offset_right = 70.0
offset_bottom = 22.0
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_v4oi6")
region_rect = Rect2(5, 69, 70, 22)

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/effects/Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.5
offset_top = -11.5
offset_right = 25.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "EFFECTS"
label_settings = SubResource("LabelSettings_v4oi6")

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer/effects"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_jt5bo")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_tw6qf")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_47ovc")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_l2it1")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_hrtfq")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_u6oi3")
theme_override_styles/hover = SubResource("StyleBoxTexture_0igwm")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_amjk3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_41ogj")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_snl73")
theme_override_styles/normal = SubResource("StyleBoxTexture_0igwm")
script = ExtResource("7_j08iq")
music_stream = ExtResource("8_7apuw")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/effects"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
script = ExtResource("5_7apuw")
bus_name = "SFX"

[node name="music_decrease" type="Button" parent="CanvasLayer/VBoxContainer/effects/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(8, 13)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_0igwm")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_41ogj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_j8nq4")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_1qe7s")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_vigiu")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_jfkqj")
theme_override_styles/hover = SubResource("StyleBoxTexture_jg2bh")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_sw2if")
theme_override_styles/pressed = SubResource("StyleBoxTexture_jg2bh")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_0x6gt")
theme_override_styles/normal = SubResource("StyleBoxTexture_jg2bh")

[node name="VolumeBar" type="ColorRect" parent="CanvasLayer/VBoxContainer/effects/HBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
color = Color(0.772549, 0.701961, 0.247059, 1)

[node name="music_increase" type="Button" parent="CanvasLayer/VBoxContainer/effects/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(8, 13)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_jg2bh")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_0j0k2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gc1hl")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_nlp30")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_l6afl")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_5pxiw")
theme_override_styles/hover = SubResource("StyleBoxTexture_0j0k2")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_m4xwb")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0j0k2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_7dyf0")
theme_override_styles/normal = SubResource("StyleBoxTexture_0j0k2")

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 684.0
offset_top = 263.0
offset_right = 724.0
offset_bottom = 303.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2

[editable path="CanvasLayer/BaseUIWindow"]
